fixed alignment with the lists

--- a/css/main.css
+++ b/css/main.css
@@ -647,6 +647,9 @@ table{
 .direct ul{
   margin-left: 12px;
 }
+.direct h2{
+  margin-left: -5px;
+}
 
 
 /*****************************************************************************/
